--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^16.13.1",
     "react-click-away-listener": "^1.4.4",
     "react-dom": "^16.13.1",
+    "react-icons": "^4.1.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "styled-components": "^5.2.1",
