--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^3.1.0",
     "@typescript-eslint/parser": "^3.1.0",
+    "@vitejs/plugin-react-swc": "^3.0.0",
     "babel-eslint": "^10.0.0",
     "babel-loader": "^8.0.0",
     "clean-webpack-plugin": "^0.1.19",
@@ -56,7 +57,6 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^25.1.0",
     "mini-css-extract-plugin": "^0.11.2",
-    "node-sass": "^4.12.0",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "prettier": "^2.1.2",
     "react-is": "^16.13.1",
@@ -67,6 +67,7 @@
     "ts-loader": "^7.0.5",
     "typescript": "^3.9.5",
     "url-loader": "^1.0.1",
+    "vite": "^4.2.0",
     "webpack": "^4.29.3",
     "webpack-cli": "^3.0.8",
     "webpack-dev-server": "^3.1.3"
