--- a/package.json
+++ b/package.json
@@ -27,12 +27,6 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@babel/core": "7.5.5",
-    "@babel/plugin-proposal-class-properties": "^7.0.0",
-    "@babel/plugin-proposal-private-methods": "^7.10.4",
-    "@babel/plugin-proposal-private-property-in-object": "^7.10.4",
-    "@babel/preset-env": "^7.0.0",
-    "@babel/preset-react": "^7.0.0",
     "@testing-library/jest-dom": "^5.11.0",
     "@testing-library/react": "^10.4.3",
     "@testing-library/user-event": "^12.0.11",
@@ -44,32 +38,15 @@
     "@typescript-eslint/eslint-plugin": "^3.1.0",
     "@typescript-eslint/parser": "^3.1.0",
     "@vitejs/plugin-react-swc": "^3.0.0",
-    "babel-eslint": "^10.0.0",
-    "babel-loader": "^8.0.0",
-    "clean-webpack-plugin": "^0.1.19",
-    "css-loader": "^1.0.0",
     "eslint": "^7.2.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.0",
-    "file-loader": "^2.0.0",
-    "html-webpack-plugin": "^3.2.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^25.1.0",
-    "mini-css-extract-plugin": "^0.11.2",
-    "optimize-css-assets-webpack-plugin": "^5.0.4",
     "prettier": "^2.1.2",
-    "react-is": "^16.13.1",
-    "style-loader": "^0.23.0",
-    "tap-spec": "^5.0.0",
-    "tape": "^4.10.1",
     "ts-jest": "^25.2.1",
-    "ts-loader": "^7.0.5",
     "typescript": "^3.9.5",
-    "url-loader": "^1.0.1",
-    "vite": "^4.2.0",
-    "webpack": "^4.29.3",
-    "webpack-cli": "^3.0.8",
-    "webpack-dev-server": "^3.1.3"
+    "vite": "^4.2.0"
   }
 }
