:construction_worker: Add checkout to install

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,7 @@ jobs:
     name: 'install'
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
       - run: yarn
 
   test:
