--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,10 @@ jobs:
     name: 'install'
     runs-on: ubuntu-latest
     steps:
+      - name: Check
+        run: |
+          pwd
+          ls
       - name: Checkout repo
         uses: actions/checkout@v2
       - name: Use Node.js 16.x
