💚 Add needs prop

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,18 +26,21 @@ jobs:
 
   test:
     name: 'test'
+    needs: install
     runs-on: ubuntu-latest
     steps:
       - run: yarn test
 
   build:
     name: 'build'
+    needs: test
     runs-on: ubuntu-latest
     steps:
       - run: yarn build
 
   deploy:
     name: 'deploy'
+    needs: build
     runs-on: ubuntu-latest
     steps:
       - name: Download artifact
