--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,6 +39,8 @@ jobs:
         with:
           name: dist
           path: ./dist
+      - name: Copy index.html for surge.sh
+        run: cp index.html 200.html
       - name: Deploy to surge.sh
         uses: dswistowski/surge-sh-action@v1
         with:
