--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,15 +1,20 @@
-name: Sudoku app CI
+name: Sudoku app CI/CD
 
 on:
   push:
     branches: [master]
   pull_request:
     branches: [master]
+  workflow_dispatch:
 
 permissions:
   contents: read
   pages: write
   id-token: write
+
+concurrency:
+  group: 'pages'
+  cancel-in-progress: true
 
 jobs:
   build_and_test:
@@ -17,7 +22,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Use Node.js 16.x
         uses: actions/setup-node@v3
         with:
@@ -42,10 +47,13 @@ jobs:
       name: github-pages
       url: bukenoff.github.io.sudoku
     steps:
+      - name: Setup Pages
+        uses: actions/configure-pages@v3
       - name: Download artifact
         uses: actions/download-artifact@v2
         with:
           name: dist
           path: ./dist
       - name: Deploy to GitHub Pages
-        uses: actions/deploy-pages@v2
+        id: deployment
+        uses: actions/deploy-pages@v1
