--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,6 +55,5 @@ jobs:
           name: dist
           path: ./dist
       - name: Deploy 🚀
-        uses: JamesIves/github-pages-deploy-action@v4
-        with:
-          folder: dist
+        id: deployment
+        uses: actions/deploy-pages@v1
