--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,8 +54,8 @@ jobs:
         with:
           name: dist
           path: ./dist
-      - name: ls stuff
-        run: ls
       - name: Deploy 🚀
         id: deployment
         uses: actions/deploy-pages@v1
+        with:
+          artifact_name: dist
