--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Build app
         run: npm run build
       - name: Upload artifacts
-        uses: actions/upload-pages-artifact@v1
+        uses: actions/upload-artifact@v3
         with:
           name: dist
           path: ./dist
@@ -43,19 +43,16 @@ jobs:
     name: 'deploy'
     needs: build_and_test
     runs-on: ubuntu-latest
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
     steps:
-      - name: Setup Pages
-        uses: actions/configure-pages@v3
       - name: Download artifact
         uses: actions/download-artifact@v2
         with:
           name: dist
           path: ./dist
-      - name: Deploy 🚀
-        id: deployment
-        uses: actions/deploy-pages@v1
+      - name: Deploy to surge
+        uses: dswistowski/surge-sh-action@v1
         with:
-          artifact_name: dist
+          domain: 'sudokuapp.surge.sh'
+          project: './dist'
+          login: ${{ secrets.surge_login }}
+          token: ${{ secrets.surge_token }}
