--- a/package.json
+++ b/package.json
@@ -46,7 +46,6 @@
     "prettier": "^2.1.2",
     "ts-jest": "^25.2.1",
     "typescript": "^3.9.5",
-    "vite": "^4.2.0",
-    "vite-plugin-chunk-split": "^0.4.7"
+    "vite": "^4.2.0"
   }
 }
