--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "prettier": "^2.1.2",
     "ts-jest": "^25.2.1",
     "typescript": "^3.9.5",
-    "vite": "^4.2.0"
+    "vite": "^4.2.0",
+    "vitest": "^0.30.1"
   }
 }
