--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "start": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "test": "jest",
-    "test:watch": "jest --watchAll"
+    "test": "vitest"
   },
   "keywords": [],
   "author": "serik",
