--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,11 +28,11 @@ jobs:
         with:
           node-version: 16.x
       - name: Install NPM Dependencies
-        run: npm install
+        run: yarn install
       - name: Run tests
-        run: npm run test
+        run: yarn test
       - name: Build app
-        run: npm run build
+        run: yarn build
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
         with:
