--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "react-icons": "^4.1.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "styled-components": "^5.2.1",
-    "uuid": "^8.3.2"
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.11.0",
