--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "start": "vite",
+    "typecheck": "tsc --noEmit --watch",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "test": "vitest"
