--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
   "dependencies": {
     "mobx": "^6.0.4",
     "mobx-react-lite": "^3.1.6",
-    "react": "^18.2.0",
+    "react": "^17.0.2",
     "react-click-away-listener": "^1.4.4",
-    "react-dom": "^18.2.0",
+    "react-dom": "^17.0.2",
     "react-icons": "^4.1.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
@@ -29,7 +29,8 @@
     "@testing-library/react": "^10.4.3",
     "@testing-library/user-event": "^12.0.11",
     "@types/jest": "^25.1.4",
-    "@types/react-dom": "^16.9.9",
+    "@types/react": "^17.0.20",
+    "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.1.6",
     "@types/styled-components": "^5.1.7",
     "@types/uuid": "^8.3.0",
