--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "@testing-library/jest-dom": "^5.11.0",
     "@testing-library/react": "^10.4.3",
     "@testing-library/user-event": "^12.0.11",
-    "@types/jest": "^25.1.4",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.1.6",
@@ -41,10 +40,8 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.0",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^25.1.0",
+    "jsdom": "^22.0.0",
     "prettier": "^2.1.2",
-    "ts-jest": "^25.2.1",
     "typescript": "^5.0.4",
     "vite": "^4.3.1",
     "vitest": "^0.30.1"
