--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "react-mobx-project-boilerplate",
+  "name": "sudoku",
   "version": "1.0.0",
-  "description": "greatest boilerplate you can ever find",
-  "main": "src/index.js",
+  "description": "Sudoku game built with react and mobx",
+  "main": "src/index.tsx",
   "scripts": {
     "start": "vite",
     "typecheck": "tsc --noEmit --watch",
@@ -25,14 +25,14 @@
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.11.0",
+    "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^10.4.3",
     "@testing-library/user-event": "^12.0.11",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
+    "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.1.6",
     "@types/styled-components": "^5.1.7",
-    "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^3.1.0",
     "@typescript-eslint/parser": "^3.1.0",
     "@vitejs/plugin-react-swc": "^3.0.0",
