--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,9 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 16.x
+      - uses: pnpm/action-setup@v2.0.1
+        with:
+          version: 7.9.5
       - name: Install NPM Dependencies
         run: pnpm run install
       - name: Run tests
