--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
         with:
           version: 7.9.5
       - name: Install NPM Dependencies
-        run: pnpm run install
+        run: pnpm install
       - name: Run tests
         run: pnpm run test
       - name: Build app
