--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,15 +27,12 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 16.x
-      - uses: pnpm/action-setup@v2.0.1
-        with:
-          version: 7.9.5
       - name: Install NPM Dependencies
-        run: pnpm install
+        run: yarn install
       - name: Run tests
-        run: pnpm run test
+        run: yarn test
       - name: Build app
-        run: pnpm run build
+        run: yarn build
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
         with:
